Añadida comprobacion a test